Terminar de poblar BD y modificar index, footer, img

--- a/src/template/base/footer.html
+++ b/src/template/base/footer.html
@@ -5,28 +5,29 @@
             <div class="row">
                 <div class="col-sm-4 col-md-4">
                     <div class="footer-content">
-                    <h4>LOREN IPSUM IS SIMPLY DUMMY</h4>
+                    <h4>MEDIOS DE PAGO</h4>
+                    <img src="{% static 'img/webpay.png' %}" width="250" height="130">
                     <div class="footer-socials">
-                        <a href="#"><i class="fa fa-user"></i></a>
-                        <a href="#"><i class="fa fa-user"></i></a>
-                        <a href="#"><i class="fa fa-user"></i></a>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
                     </div>
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-4">
                     <div class="footer-content">
                     <h4>DATOS GENERALES</h4>
-                    <p>Lorem Ipsum is simply dummy text<br>
-                    Othervilla AB 6007, Other</p>
-                    <p>Lorem Ipsum is simply dummy text<br>
-                    <a href="#">Lorem Ipsum is simply dummy text</a><br>
-                    Lorem Ipsum is simply dummy text</p>
+                    <p>Oficina central: Santiago <br>
+                       Padre alonso de ovalle 1345, Santiago centro.</p>
+                    <p><b>Preguntas Frecuentes</b><br>
+                    <a href="#"><b>Prestación de servicio</b></a><br>
+                    <b>Politicas de privacidad</b></p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-4">
                     <div class="footer-content">
                         <h4>CONTACTANOS</h4>
-                        <p>¿Necesitas ayuda? <br>Puedes escribirnos tus dudas y/o inquietudes al siguiente correo: <b>soporte_mi_estacionamiento@gmail.com</b></p>
+                        <p>¿Necesitas ayuda? <br>Puedes escribirnos tus dudas y/o inquietudes al siguiente correo: <b>soporte_mi_estacionamiento@gmail.com</b>  Telefono: <br><b>+56986709087<b> </b></p>
                     </div>
                 </div>
             </div>
