--- a/src/template/index.html
+++ b/src/template/index.html
@@ -9,86 +9,72 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="title text-center" style="color:white;">Politicas</h3>
+                <h3 class="title text-center" style="color:white;">Nuestra Página</h3>
             </div>
         </div>
         
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-8">
                 <div class="text-center services-item politicas-card">
                     <div class="col-wrapper">
-                    <div class="icon-border"> 
-                        <i class="icon-design-graphic-tablet-streamline-tablet color-l-orange"></i> 
+                        <div class="icon-border"> 
+                            <i class="icon-design-graphic-tablet-streamline-tablet" style="color:red;"></i> 
+                        </div>
+                            <h5>¿Buscas algo rapido y seguro?</h5>
+                            <p>En estos tiempos donde cada minuto nos importa, a llegado "mi estacionamiento" una pagina web hecha idealmente para aprovechar tu tiempo al maximo.  </p>
                     </div>
-                    <h5>Loren Ipsum</h5>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+
+           
+            
+            <div class="col-sm-4">
+            <div class="text-center services-item politicas-card ">
+                <div class="col-wrapper">
+                    <a href="estacionamiento/disponibilidad/"> <img src="{% static 'img/MAPS.png' %}" alt="disponibilidad estacionamiento" width="310" height="167,2"></a>
                     </div>
                 </div>
             </div>
-
-            <div class="col-sm-4">
-            <div class="text-center services-item politicas-card ">
-                <div class="col-wrapper">
-                <div class="icon-border"> 
-                    <i class="icon-design-pencil-rule-streamline color-l-blue"></i> 
-                </div>
-                <h5>Loren Ipsum</h5>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                </div>
-            </div>
-            </div>
-
-            <div class="col-sm-4">
-            <div class="text-center services-item politicas-card ">
-                <div class="col-wrapper">
-                <div class="icon-border"> 
-                    <i class="icon-speech-streamline-talk-user color-l-yellow"></i> 
-                </div>
-                <h5>Loren Ipsum</h5>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                </div>
-            </div>
-            </div>
+            
         </div>
-        <br>
-        <div class="row">
-            <div class="col-sm-4">
-            <div class="text-center services-item politicas-card ">
-                <div class="col-wrapper">
-                <div class="icon-border"> 
-                    <i class="icon-settings-streamline-2 color-l-purple"></i> 
-                </div>
-                <h5>Loren Ipsum</h5>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="text-center services-item politicas-card">
+                            <div class="col-wrapper">
+                                <div class="icon-border"> 
+                                    <i class="icon-design-graphic-tablet-streamline-tablet" style="color:greenyellow;"></i> 
+                                </div>
+                                    <h5>Optimización</h5>
+                                    <p>Optimización y control al estacionar </p>
+                            </div>
+                        </div>
+                    </div>
+        
+                    <div class="col-sm-4">
+                    <div class="text-center services-item politicas-card ">
+                        <div class="col-wrapper">
+                            <div class="icon-border"> 
+                                <i class="icon-design-pencil-rule-streamline" style="color:aqua;"></i> 
+                            </div>
+                                <h5>Facil de usar</h5>
+                                <p>Amigable e intuitiva</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="text-center services-item politicas-card ">
+                            <div class="col-wrapper">
+                                <div class="icon-border"> 
+                                    <i class="icon-design-pencil-rule-streamline" style="color:blueviolet;"></i> 
+                                </div>
+                                    <h5>Reportes</h5>
+                                    <p>Chequeo de disponibilidad en tiempo real</p>
+                                </div>
+                            </div>
+                        </div>
+                </div>    
             </div>
-            </div>
-
-            <div class="col-sm-4">
-            <div class="text-center services-item politicas-card ">
-                <div class="col-wrapper">
-                <div class="icon-border"> 
-                    <i class="icon-streamline-umbrella-weather color-l-pink"></i> 
-                </div>
-                <h5>Loren Ipsum</h5>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                </div>
-            </div>
-            </div>
-
-            <div class="col-sm-4">
-            <div class="text-center services-item politicas-card ">
-                <div class="col-wrapper">
-                <div class="icon-border"> 
-                    <i class="icon-caddie-shopping-streamline color-l-green"></i> 
-                </div>
-                <h5>Loren Ipsum</h5>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                </div>
-            </div>
-            </div>
-        </div>
-    </div>
 </section>
 {% endblock%}
 
