--- a/src/template/estacionamientos/estacionamiento_privado_agregar.html
+++ b/src/template/estacionamientos/estacionamiento_privado_agregar.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 
-{% block title %}Particulares{% endblock %}
+{% block title %}Privados{% endblock %}
 {% block navbar %} {% include 'base/navbar.html' %} {% endblock %}
 
 {% block content %}
@@ -30,13 +30,30 @@
 {% endblock%}
 {% block scripts %}
 <script>
-    document.getElementById("id_user").setAttribute("disabled", true);
-    document.getElementById("id_tipo_estacionamiento").value = "1"; 
-    $('#id_tipo_estacionamiento').attr("disabled", true); 
+    // desactivar otros tipos de estacionamientos y mostrar la opcion uno
+    document.getElementById("id_tipo_estacionamiento").value = "2";
+    document.getElementById("id_tipo_estacionamiento").setAttribute("disabled", true);
+
+    // desactivar otras comunas por requerimientos de la aplicacion (Solo Santiago)
     document.getElementById("id_comuna_estacionamiento").value = "3"; 
     document.getElementById("id_comuna_estacionamiento").setAttribute("disabled", true);
-    document.getElementById("id_estado_estacionamiento").value = "1"; 
-    document.getElementById("id_estado_estacionamiento").setAttribute("disabled", true);
+
+    // filtrar estados de estacionamientos
+    var op_estado = document.getElementById("id_estado_estacionamiento").getElementsByTagName("option");
+    for (var i = 0; i < op_estado.length; i++) {
+        if (op_estado[i].value.toLowerCase() != "1") {
+            op_estado[i].disabled = true;
+        }
+    }
+    document.getElementById("id_estado_estacionamiento").value = "1";
+
+    // filtrar categorias
+    var op_categorias = document.getElementById("id_categoria_estacionamiento").getElementsByTagName("option");
+    for (var i = 0; i < op_categorias.length; i++) {
+        if (op_categorias[i].value.toLowerCase() == "1" || op_categorias[i].value.toLowerCase() == "3" || op_categorias[i].value.toLowerCase() == "6"    ) {
+            op_categorias[i].disabled = true;
+        }
+    }
 </script>
 {% endblock %}
 {% block footer %} {% include 'base/footer.html' %} {% endblock %}
